# NPLANT

./: .gitignore  Functions.c  Functions.h  Global variables.h  IoT_project.code-workspace  LICENCE  Makefile  README.md  c_cpp_properties.json  main.c
doc/: Doxyfile
doc/UML/: .$IoT Project.drawio.bkp  IoT Project.drawio
doc/html/: annotated.html  bug.html  classes.html  color_8h_source.html  connect_8c.html  connect_8c__incl.map  connect_8c__incl.md5  connect_8h.html  connect_8h__dep__incl.map  connect_8h__dep__incl.md5  connect_8h__incl.map  connect_8h__incl.md5  connect_8h_source.html  dir_000004_000001.html  dir_14f8362a726a6d32d3229d14f053078a.html  dir_14f8362a726a6d32d3229d14f053078a_dep.map  dir_14f8362a726a6d32d3229d14f053078a_dep.md5  dir_167790342fb55959539d550b874be046.html  dir_167790342fb55959539d550b874be046_dep.map  dir_167790342fb55959539d550b874be046_dep.md5  dir_4d449a1cac6fb5523b8dd374f5568510.html  dir_4d449a1cac6fb5523b8dd374f5568510_dep.map  dir_4d449a1cac6fb5523b8dd374f5568510_dep.md5  dir_4f0bad2511144d0c42e51ee3c42d2e51.html  dir_4f0bad2511144d0c42e51ee3c42d2e51_dep.map  dir_4f0bad2511144d0c42e51ee3c42d2e51_dep.md5  dir_58a9f5a8fac2e5861ad3429de38b6c23.html  dir_58a9f5a8fac2e5861ad3429de38b6c23_dep.map  dir_58a9f5a8fac2e5861ad3429de38b6c23_dep.md5  dir_a81ec1d87961fa88a93da68fcfef2c06.html  dir_a81ec1d87961fa88a93da68fcfef2c06_dep.map  dir_a81ec1d87961fa88a93da68fcfef2c06_dep.md5  dir_d1e03021c19619019fd9023f25873341.html  dir_d1e03021c19619019fd9023f25873341_dep.map  dir_d1e03021c19619019fd9023f25873341_dep.md5  dir_e09f5fa224a73e6261989725117427f3.html  dir_e09f5fa224a73e6261989725117427f3_dep.map  dir_e09f5fa224a73e6261989725117427f3_dep.md5  dir_f43f6a6101bc2d49497d823a6000d2f6.html  dir_f43f6a6101bc2d49497d823a6000d2f6_dep.map  (+29 more)
doc/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  searchdata.js
doc/latex/: annotated.tex  bug.tex  color_8h_source.tex  connect_8c.tex  connect_8c__incl.md5  connect_8h.tex  connect_8h__dep__incl.md5  connect_8h__incl.md5  connect_8h_source.tex  files.tex  inc_8h.tex  inc_8h__dep__incl.md5  inc_8h__incl.md5  inc_8h_source.tex  lib_8c.tex  lib_8c__incl.md5  main_8c.tex  main_8c__incl.md5  main_8cpp.tex  main_8cpp__incl.md5  parsingJson_8c.tex  parsingJson_8h.tex  parsingJson_8h__incl.md5  parsingJson_8h_source.tex  refman.tex  structSurface.tex
pkg/: CMakeLists.txt
project/: RTDB.json  firebase.json
project/ESP32/ESP32-RTDB/: ESP32-RTDB.code-workspace  README.md  platformio.ini
project/ESP32/ESP32-RTDB/src/: main.cpp
project/ESP32/esp32-RTDB/: ESP32-Firebase-Demo.ino
project/ESP32/esp32-RTDB/ESP32-RTDB/src/: main.cpp
project/GUI/inc/: connect.h  inc.h  parsingJson.h
project/GUI/src/: connect.c  lib.c  main.c  parsingJson.c
project/firebase/: Auth_request.json  RTDB.json  firebase.json
